[package]
name = "hang-c"
description = "Media over QUIC C Interface"
authors = ["Luke Curley <kixelated@gmail.com>", "Brian Medley <bpm@bmedley.org>"]
repository = "https://github.com/kixelated/moq"
license = "MIT OR Apache-2.0"

version = "0.6.1"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bytes = "1.10"
futures = "0.3"
lazy_static = "1"
hang = { workspace = true }
moq-lite = { workspace = true, features = ["serde"] }
moq-native = { workspace = true }
regex = "1"
serde = { workspace = true }
serde_json = "1"
serde_with = { version = "3", features = ["hex"] }
thiserror = "2"
tokio = { workspace = true, features = ["macros"] }
tracing = "0.1"
url = "2"

[dependencies.derive_more]
version = "2"
features = ["from", "display", "debug"]

[dev-dependencies]
anyhow = "1"
moq-native = { workspace = true }
url = "2"

[lib]
crate-type = ["cdylib"] # or ["staticlib"]
