[package]
name = "hang-c"
description = "Media over QUIC, C Interface"
authors = ["Luke Curley <kixelated@gmail.com>", "Brian Medley <bpm@bmedley.org>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.7.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[lib]
name = "hang"
crate-type = ["cdylib", "staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bytes = "1.10"
hang = { workspace = true }
moq-lite = { workspace = true, features = ["serde"] }
moq-native = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
url = "2"

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
anyhow = "1"
moq-native = { workspace = true }
url = "2"
