[package]
name = "moq-token"
description = "Media over QUIC - Token Generation and Validation"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/moq"
license = "MIT OR Apache-2.0"

version = "0.5.5"
edition = "2021"

[features]
jwk-rsa = ["rsa"]
jwk-ec = ["elliptic-curve", "p256", "p384"]

[dependencies]
anyhow = "1"
aws-lc-rs = "1"
base64 = "0.22"
elliptic-curve = { version = "0.13.8", features = ["jwk", "arithmetic", "alloc", "sec1", "pkcs8"], optional = true }
jsonwebtoken = "9"
p256 = { version = "0.13.2", features = ["serde", "jwk"], optional = true }
p384 = { version = "0.13.1", optional = true }
rsa = { version = "0.9.9", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["base64"] }
